tests/diag/type-ternary.wisp
const v = true ? 1 : "no";
